<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingTop="70dp"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:layout_marginTop="1dp"
        android:id="@+id/key_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:textAlignment="center"
        android:text="@string/balance_value" />
    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"

        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="40sp"
        android:text="@string/balance"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balance_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textAlignment="center"
        android:text="@string/balance_value" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/addCash"
        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        app:icon="@drawable/ic_baseline_remove_shopping_cart_24"
        app:iconGravity="textStart"
        app:iconPadding="10dp"

        android:text="@string/add_cash" />

    <Button
        android:id="@+id/removeCash"
        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        app:icon="@drawable/ic_baseline_add_shopping_cart_24"
        app:iconGravity="textStart"
        app:iconPadding="-1dp"
        android:text="@string/spend_cash" />
</LinearLayout>
    <Button
        android:id="@+id/refresh"
        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="50dp"
        app:icon="@drawable/ic_baseline_add_shopping_cart_24"
        app:iconGravity="textStart"
        app:iconPadding="-1dp"
        android:text="@string/refresh_wallet" />
    <Button
        android:id="@+id/exit"
        style="?attr/materialButtonOutlinedStyle"
        android:backgroundTint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        app:icon="@drawable/ic_baseline_add_shopping_cart_24"
        app:iconGravity="textStart"
        app:iconPadding="-1dp"
        android:text="@string/exit" />

</LinearLayout>